tests/compile_fail/try_from/duplicate_unnamed.stderr
error: `F1` types collection is used for more than one variant (`Field`, `Field2`), non-repr `try_from` cannot be implemented (try changing the order of fields as a workaround)
 --> tests/compile_fail/try_from/duplicate_unnamed.rs:7:11
  |
7 |     Field2(F1),
  |           ^^^^
